seperated contact info

--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Us</h3>
 
-<p>We are two final year CS students, Cao Chao((<a href="caochao39@gmail.com" class="user-mention">@caochao39</a>)) and Hu Shengjie ((<a href="jasonhu515@gmail.com" class="user-mention">@jasonhu5</a>)), from the University of Hong Kong (HKU) and we are doing our final year project under the supervision of Prof. Wenping Wang ((<a href="http://i.cs.hku.hk/~wenping/" class="user-mention">@WenPing Wang</a>))from the Computer Science Department at HKU.</p>
+<p>We are two final year CS students, Cao Chao and Hu Shengjie, from the University of Hong Kong (HKU) and we are doing our final year project under the supervision of Prof. Wenping Wang ((<a href="http://i.cs.hku.hk/~wenping/" class="user-mention">@WenPing Wang</a>))from the Computer Science Department at HKU.
+
+<br>
+Please contact us at:
+
+Cao Chao: caochao39@gmail.com
+Hu Shengjie: jasonhu515@gmail.com
+</p>
 
 
       <footer class="site-footer">
