removed distributed from title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Deep-Learned Collision Avoidance Policy for Distributed Agent Navigation</title>
+    <title>Deep-Learned Collision Avoidance Policy for Agent Navigation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Deep-Learned Collision Avoidance Policy for Distributed Agent Navigation</h1>
+      <h1 class="project-name">Deep-Learned Collision Avoidance Policy for Agent Navigation</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
@@ -36,7 +36,7 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Us</h3>
 
-<p>We are two final year CS students, Cao Chao and Hu Shengjie, from the University of Hong Kong (HKU) and we are doing our final year project under the supervision of Prof. Wenping Wang ((<a href="http://i.cs.hku.hk/~wenping/" class="user-mention">@WenPing Wang</a>))from the Computer Science Department at HKU.
+<p>We are two final year CS students, Cao Chao and Hu Shengjie, from the University of Hong Kong (HKU) and we are doing our final year project under the supervision of Prof. Wenping Wang (<a href="http://i.cs.hku.hk/~wenping/" class="user-mention">@WenPing Wang</a>)from the Computer Science Department at HKU.
 <br>
 <br>
 Please contact us at:
