--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Deep-Learned Collision Avoidance Policy for Agent Navigation</title>
+    <title>Deep-Learned Pedestrian Avoidance Policy for Robot Navigation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -32,6 +32,17 @@
 
 <p>This project particularly serves as one component of Simultaneous Localization and Mapping (SLAM) infrastructure). We will focus on tuning the neural network for better performance in indoor environment and assume there is only one agent that is using such network in the environment.</p>
 
+<h3>
+<a id="video" class="anchor" href="#video" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Demo 1 (open space test)</h3>
+<iframe width="640" height="480" src="https://www.youtube.com/embed/ZLBTMXR4nOQ"></iframe>
+<br>
+<br>
+      
+<h3>
+<a id="video" class="anchor" href="#video" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Demo 2 (corridor test)</h3>
+<iframe width="640" height="480" src="https://www.youtube.com/embed/iREEAKCbwRM"></iframe>
+<br>
+<br>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Us</h3>
