--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Deep-Learned Collision Avoidance Policy for Agent Navigation</h1>
+      <h1 class="project-name">Deep-Learned Pedestrian Avoidance Policy for Robot Navigation</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
