--- a/index.html
+++ b/index.html
@@ -16,10 +16,17 @@
     </section>
 
     <section class="main-content">
-      <h3>
+
+<h3>
+<a id="summary" class="anchor" href="#background" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary</h3>
+
+<p>In this project, we study the pedestrian avoidance and path following problems with the input solely from a monocular camera of a mobile robot. Previous works mainly focused on vision-based approaches to explicitly perform pedestrian detection and path identification; we propose a learning-based approach based on Deep Neural Networks (DNNs) trained on large scale image dataset. By doing so, we cast the two tasks into image classification problems. Preliminary results show that our approach outperforms the alternative vision-based solution with more robustness and generality. 
+</p>
+   
+<h3>
 <a id="background" class="anchor" href="#background" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Background</h3>
 
-<p>Agent navigation is used in various artificial intelligence applications and research projects, for example, unmanned aerial vehicles, autonomous cars. Navigation as a whole involves multiple goals, for example, target reaching or task accomplishment, efficient path planning and collision avoidance. In terms of collision avoidance in dynamic environments, intensive calculation is needed using a computer vision based algorithm. 
+<p>Autonomous navigation and collision avoidance are challenging and still remain unsolved for robotics. Solutions to such problems are essential to many robotic applications including service robots, Last-Mile-Delivery and postdisaster search and rescue. In order to successfully navigate along a path and avoid pedestrians at the same time, the robot needs to perceive where the path is leading and where the pedestrians are. Based on those information, the robot can then react in order to stay on the path and avoid collision with human beings. In this project, we propose a machine-learning approach to tackle such problems and show preliminary results   on an autonomous mobile robot.
 </p>
 
 <h3>
