--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@ Path following and pedestrian avoidance for mobile robots are extremely difficul
 <br>
 
 <h3>
+<a id="video" class="anchor" href="#video" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Demo 2 (corridor test, first robot view)</h3>
+<iframe width="640" height="480" src="https://www.youtube.com/embed/M8TVwy390tU"></iframe>
+<br>
+<br>
+
+<h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Us</h3>
 
 <p>We are two final year CS students, Cao Chao and Hu Shengjie, from the University of Hong Kong (HKU) and we are doing our final year project under the supervision of Prof. Wenping Wang (<a href="http://i.cs.hku.hk/~wenping/" class="user-mention">@WenPing Wang</a>)from the Computer Science Department at HKU.
